@@ -1,0 +1,17 @@
+- **Benefit rules configuration**: It is possible to select multiple benefit
+  rules which will be available when subscribing the contract. If this is the
+  case, the contract's subscriber will be able to chose the rule he wants to
+  use.
+  It is still possible to force the use of a given rule through the
+  configuration. For instance, one can decide to force the deductible rule,
+  while letting the subscriber chose the indemnification rule.
+
+- **Subscription selection of benefit rules**: When subscribing a contract, for
+  each selected coverage, the list of related benefits will be displayed with
+  their associated rules. The user can then chose the rules (and their
+  parameters if applicable) depending on the subscriber's choices.
+
+- **Claim services transferring**: When transferring a group contract to a
+  different product, we want to automatically create new delivered services for
+  existing claims. It is possible to select for each option / benefit tuple on
+  the source contract the associated data on the new contract.
