@@ -5,8 +5,15 @@
   Il reste possible de forcer une règle via paramétrage. Il est donc possible
   de forcer la règle de franchise, tout en laissant la main au souscripteur
   pour la règle d'indemnisation.
+
 - **Saisie en souscription des règles de prestation** : Lors de la
   souscription, pour chaque garantie sélectionée, la liste des prestations
   associées avec les règles correspondantes sont affichées, afin que le
   gestionnaire puisse saisir les règles (avec leurs paramètres le cas échéant)
   en fonction des demandes du souscripteur.
+
+- **Transfert de services delivrés** : Dans le cas d'un changement de contrat
+  collectif, on permet d'automatiquement créer les nouveaux services délivrés
+  sur les sinistres existant. On permet de sélectionner pour chaque couple
+  option / prestation de l'ancien contrat les données correspondante sur le
+  nouveau contrat.
