@@ -1,0 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!-- This file is part of Coog. The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<tryton>
+    <data>
+        <record model="event.type" id="event_transferred_service">
+            <field name="name">Transferred Services</field>
+            <field name="code">transferred_claim_service</field>
+        </record>
+    </data>
+</tryton>
