@@ -9,3 +9,5 @@ xml:
     benefit.xml
     contract.xml
     rule_engine.xml
+    event.xml
+    wizard.xml
