@@ -1,0 +1,13 @@
+<?xml version="1.0"?>
+<!-- This file is part of Coog. The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<tree string="Benefits" editable="bottom">
+    <field name="number"/>
+    <field name="source_covered"/>
+    <field name="source_option"/>
+    <field name="source_benefit"/>
+    <field name="target_covered" widget="selection"/>
+    <field name="target_option" widget="selection"/>
+    <field name="target_benefit" widget="selection"/>
+    <field name="possible_benefits" tree_invisible="1"/>
+</tree>
