@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<!-- This file is part of Coog. The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<form string="Transfer Services - Benefits">
+    <field name="lines" expand_toolbar="0" colspan="4"/>
+    <field name="possible_covered" invisible="1"/>
+</form>
