@@ -1,3 +1,4 @@
+* Transfer claim services between contracts
 * Filter complementary data on delivered service according to selected rules
 
 Version 1.8 - 2016-07-06
